--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-    /* font-family: 'Comfortaa', sans-serif; */
-    /* font-family: 'Permanent Marker', cursive; */
-    /* font-family: 'Architects Daughter', cursive; */
-    /* font-family: 'Indie Flower', cursive; */
-    /* font-family: 'Kalam', cursive; */
-    /* font-family: 'Macondo', cursive; */
+/* font-family: 'Comfortaa', sans-serif; */
+/* font-family: 'Permanent Marker', cursive; */
+/* font-family: 'Architects Daughter', cursive; */
+/* font-family: 'Indie Flower', cursive; */
+/* font-family: 'Kalam', cursive; */
+/* font-family: 'Macondo', cursive; */
 
 body {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -23,7 +23,7 @@ body {
 
 #score {
     margin-bottom: 7px;
-    font-size : 12px;
+    font-size: 12px;
     font-family: 'Comfortaa', sans-serif;
 }
 
@@ -69,16 +69,29 @@ button {
     text-transform: uppercase;
     transition: 0.5s;
     background-size: 200% auto;
-    color: black;            
+    color: black;
     box-shadow: 0 0 20px #eee;
     border-radius: 10px;
     display: block;
     border-color: #7F4796;
     font-family: 'Comfortaa', sans-serif;
-  }
+}
 
 button:hover {
     background-position: right center;
     color: black;
     text-decoration: none;
-  }
+}
+
+@media screen and (max-width: 900px) {    
+    #gameBoard {
+        grid-template-columns: repeat(3, 7.5rem);
+        grid-template-rows: repeat(3, 7.5rem);
+        grid-gap: 0.31rem;
+    }
+    
+    .bigGrid {
+        grid-template-columns: repeat(3, 2.5rem);
+        grid-template-rows: repeat(3, 2.5rem);
+    } 
+}
