--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@ body {
     font-family: 'Permanent Marker', cursive;
 }
 
+#gameInstructions p{
+    display:grid;
+    grid-template-columns: minmax(200px, 700px);
+    text-align: left;
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 14px;
+    line-height: 2;
+}
+
 #instructionForPlayer {
     margin-top: 15px;
     margin-bottom: 10px;
@@ -61,6 +70,11 @@ body {
     align-items: center;
 }
 
+.buttons{
+    display:grid;
+    grid-template-columns: repeat(2, auto);
+}
+
 button {
     background-image: linear-gradient(to right, #BE93C5 0%, #7BC6CC 60%, #BE93C5 100%);
     margin: 3px;
@@ -82,6 +96,12 @@ button:hover {
     color: black;
     text-decoration: none;
 }
+
+:modal {
+    background-color: white;
+    border: 2px solid #7F4796;
+    border-radius: 5px;
+  }
 
 @media screen and (max-width: 900px) {    
     #gameBoard {
